--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA5L3Jhd3BpeGVsb2ZmaWNlOV93ZWJfZGVzaWduX21vY2t1cF93ZWJzaXRlX2Z1bGxfc2NyZWVuX2hpZ2hfcmVzb181NzljMGM3Ny04MDI1LTQ0MjktYmMxNS03YTU0ZjU0YjdjZjMucG5n.png" />
+    <link rel="icon" href="tile000.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
